# symplexia

./: Cargo.toml  README.md
src/: lib.rs
src/homology/barcodes/: barcode-collections.rs  intervals.rs  persistence-invariant-descriptor.rs
src/homology/chain_basis/: primitive-basis.rs  simplex.rs
src/homology/utility/: homology-utility.rs
