[package]
name = "symplexia"
version = "0.1.0"
edition = "2021"
authors = ["John Bochicchio <jpbochicchio@gmail.com>"]
repository = "https://github.com/jpbochicchio/symplexia.git"
homepage = "https://github.com/jpbochicchio/symplexia.git"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/jpbochicchio/symplexia/"
description = "A rust implementation of 'JavaPlex'; a Java library for persistent homology and topological data analysis."

[lib]
crate-type = ["lib"]

[badges.maintenance]
status = "actively-developed"

[dependencies]
lazy_static = "1.4.0"
mut_static = "5.0.0"
